Update settings menu spacing

--- a/src/App.css
+++ b/src/App.css
@@ -703,6 +703,9 @@ dialog {
     &.matches {
       height: 85dvh;
     }
+    &.settings {
+      justify-content: space-evenly;
+    }
   }
 
   nav label, nav input {
